assets/styles/partials/_menus.scss
/* ==========================================================================
   Menus
   ========================================================================== */

.site-description {
	display: none;
}

.site-title {
	visibility: hidden;
	height: 0;
}

div.languages{
	position: absolute;
	right: 15px;
	ul{
		list-style-type: none;
		li{
		float: left;
		padding-left: 5px;
		}
		a{
			text-decoration: none;
			color: black;
			font-size: 14px;
		}
	}
}

header.site-header{
	hr{
		color: black;
		background-color: black;
		border: none;
		height: 1px;
		clear: both;
		margin-top: -$bru*2;
		width: 78%;
		margin: 0 auto;
		margin-bottom: $bru*2;
	}
}

div.site-branding{
	display: none;
}

.main-navigation {
	clear: both;
	float: left;
	width: 100%;
	height: 100px;
	padding-bottom: $bru;
	padding-top: $bru*2;
}

.main-navigation ul {
	list-style: none;
	margin: 0 auto;
	padding-left: 0;
}

.menu-principal-container{
	margin: 0 auto;
}

.main-navigation li {
	width: 20%;
	float: left;
	padding-top: 0px;
	padding-right:  0px;
	padding-left: 50px;
	border-left: 1px solid grey;
}

.main-navigation a {
	display: block;
	text-decoration: none;
	font-family: $worksans;
	color: black;
	text-transform: uppercase;
	font-size: 16px;
}

.main-navigation li:first-of-type {
	margin-top: -10px;
	background-image: url('assets/img/fblogovert.png');
	background-size: 40%;
	background-position: right;
	background-repeat: no-repeat;
	height: 100px;
	a{
		visibility: hidden;
	}
}

.main-navigation li:nth-of-type(2) {
	border: none;
	padding-bottom: 3px;
}

.main-navigation li:nth-of-type(2):after {
	content: '—';
}
.main-navigation li:nth-of-type(3) {
	padding-bottom: 3px;
}

.main-navigation li:nth-of-type(3):after {
	content: '—';
}

.main-navigation li:nth-of-type(4) {
	padding-bottom: 3px;
}

.main-navigation li:nth-of-type(4):after {
	content: '—';
}

.main-navigation li:nth-of-type(5) {
	border: none;
}

.main-navigation li:nth-of-type(6) {
}


.main-navigation ul ul {
	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
	display: none;
	float: left;
	left: 0;
	position: absolute;
	top: 1.5em;
	z-index: 99999;
}

.main-navigation ul ul ul {
	left: 100%;
	top: 0;
}

.main-navigation ul ul a {
	width: 200px;
}

.main-navigation ul ul li {
}

.main-navigation li:hover > a {
}

.main-navigation ul ul :hover > a {
}

.main-navigation ul ul a:hover {
}

.main-navigation ul li:hover > ul {
	display: block;
}

.main-navigation .current_page_item a,
.main-navigation .current-menu-item a {
}

/* Small menu */

button.menu-toggle{
	background-color: $petergreen;
	border: none;
	padding: 10px;
}
.menu-toggle {
	cursor: pointer;
	display: none;
}

@media screen and (max-width: 1220px) {
	.main-navigation li {
		width: 20%;
		float: left;
		padding-top: 0px;
		padding-right:  0px;
		padding-left: 20px;
		border-left: 1px solid grey;
	}

	.main-navigation li:first-of-type {
		margin-top: -10px;
		background-image: url('assets/img/fblogovert.png');
		background-size: 50%;
		background-position: right;
		background-repeat: no-repeat;
		height: 100px;
		a{
			visibility: hidden;
		}
	}

}

@media screen and (max-width: 800px) {
	.menu-toggle,
	.main-navigation.toggled .nav-menu {
		display: block;
	}

	.main-navigation ul {
		display: none;
	}
	button.menu-toggle{
		margin: 0 auto;
	}
	.site-title {
		visibility: visible;
		height: auto;
		width: 40%;
		margin: 0 auto;
		margin-top: $bru;
		background-image: url('assets/img/fblogovert.png');
		background-size: 100%;
		background-repeat: no-repeat;
		a{
			visibility: hidden;
		}
	}

	.site-description {
		display: block;
	}


	div.site-branding{
		display: block;
		h1{
			height: 300px;
		}
		h2{
			text-align: center;
		}
	}

	.main-navigation li:first-of-type {
		display: none;
	}

	.main-navigation{
		background-color: white;
		z-index: 5;
	}

	.main-navigation li {
		width: 100%;
		text-align: center;
		padding: 0;
	}

	div.languages{
	position: relative;
	width: 100%;
	margin: 0 auto;
	ul li{
		float: right;
		background-color: grey;
		padding: 10px;
		margin: 5px;
		width: 25px;
		text-align: center;
		}
		.current-lang{
			background-color: $petergreen;
		}
	}

	nav#site-navigation.toggled{
		height: 400px;
		div.menu-principal-container{
			margin-top: $bru;
		}
	}

	.main-navigation li:nth-of-type(5):after {
		content: '—';
	}

	.main-navigation li:nth-of-type(6):after {
		content: '—';
	}


}

@media screen and (max-width: 600px) {
	div.site-branding{
		h1{
			height: 200px;
		}
	}

}

@media screen and (max-width: 400px){
	div.site-branding{
		h1{
			height: 150px;
		}
	}
}
.site-main .comment-navigation,
.site-main .paging-navigation,
.site-main .post-navigation {
	margin: 0 0 1.5em;
	overflow: hidden;
}

.comment-navigation .nav-previous,
.paging-navigation .nav-previous,
.post-navigation .nav-previous {
	float: left;
	width: 50%;
}

.comment-navigation .nav-next,
.paging-navigation .nav-next,
.post-navigation .nav-next {
	float: right;
	text-align: right;
	width: 50%;
}

